--- a/confirm_order.html
+++ b/confirm_order.html
@@ -212,7 +212,7 @@
                 localStorage.removeItem("cart");
                 localStorage.removeItem("customerDetails");
                 alert("Order canceled!");
-                window.location.href = "index.html";
+                window.location.href = "indexin.html";
             });
         });
     </script>
