--- a/profile.html
+++ b/profile.html
@@ -95,7 +95,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="index.html"><span class="close">&times;</span></a>
+        <a href="indexin.html"><span class="close">&times;</span></a>
 
         <h1>User Profile</h1>
         <h2>My Orders</h2>
@@ -104,7 +104,7 @@
         <div class="select-payment">Select your payment method</div>
         <div class="payment">
         <div class="pay"><a href="payment.html">Make payment</a></div>
-        <div class="payon"><a href="index.html">Payment when pickup</a></div>
+        <div class="payon"><a href="congratulation.html">Payment when pickup</a></div>
         </div>
     </div>
     
