--- a/payment.html
+++ b/payment.html
@@ -115,7 +115,7 @@
                     paymentForm.reset();
                     // Redirect to success page or back to home
                     setTimeout(() => {
-                        window.location.href = 'index.html';
+                        window.location.href = 'congratulation.html';
                     }, 2000);
                 } else {
                     showMessage('Payment verification failed.', 'error');
