--- a/congratulation-pay.html
+++ b/congratulation-pay.html
@@ -14,7 +14,7 @@
     <section class="confirmation">
         <h2>Your order was Successful! 🎉</h2>
         <p>Thank you for shopping with us.</p>
-        <p>You will pay when pickup</p>
+        <p>Your will be soon ready to pickup</p>
         <a href="indexin.html" class="btn">Back to Home</a>
     </section>
 </body>
