--- a/forladies.html
+++ b/forladies.html
@@ -18,7 +18,7 @@
         </div>
         <nav class="nav-bar">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="indexin.html">Home</a></li>
                 <li><a href="forman.html">For Mens</a></li>
                 <li><a href="forladies.html" class="active">For Ladies</a></li>
                 <li><a href="ContactUs.html">Contact us</a></li>
