--- a/confirm_order.html
+++ b/confirm_order.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confirm Your Order</title>
+    <title>Freaky Times Luxury</title>
     <link rel="stylesheet" href="confirm_order.css">
 </head>
 <body>
