--- a/ContactUsin.html
+++ b/ContactUsin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Freaky Times Luxury</title>
     <link rel="stylesheet" href="Content Us.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
         </div>
         <nav class="nav-bar">
             <ul>
-              <li><a href="indexin.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="formanin.html">For Mens</a></li>
               <li><a href="forladiesin.html">For Ladies</a></li>
               <li><a href="ContactUsin.html" class="active">Contact us</a></li>
