--- a/congratulation.html
+++ b/congratulation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Booking Confirmation</title>
+    <title>Freaky Times Luxury</title>
     <link rel="stylesheet" href="congratulation.css">
 </head>
 <body>
