--- a/payment.html
+++ b/payment.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PayStack Payment Integration</title>
+    <title>Freaky Times Luxury</title>
     <link rel="stylesheet" href="mono.css">
 </head>
 <body>
